# spectroterm

./: README.md  build.py  main.py  main_curses.py  pyproject.toml  setup.py  spectrum_curses_cython.pyx  spectrum_cython.pyx  tui.py
.github/workflows/: build-and-release.yml
